# Leviathan

./: .gitignore  Readme.rtf
Linux/: Leviathan.cbp  Leviathan.depend  Leviathan.layout
Makefiles/: CMakeCache.txt  Makefile  cmake_install.cmake
Media/Audio/: LeviathanSounds.imf  LeviathanVoices.imf
Media/Fonts/: FontPack.imf
Media/Models/: UnitBox.imf  UnitSphere.imf
Media/Settings/: TestFile.txt  UserSettings.txt
Media/Shaders/: CompleteProgram.imf  SolarShader.imf
Media/Textures/: ComponentIcons.imf  DialBoundary.imf  ExitBackground.imf  HullDamageDecal.imf  LeviathanImages.imf  NormalMappingTest.xcf  NormalMappingTexture.imf  PerlinNoise.imf  PlayerShipDisplayImages.imf  RedDecalTexture.imf  TypeIcons.imf
Visual Studio/LeviathanVS/: LeviathanVS.rc  LeviathanVS.sln  LeviathanVS.vcxproj  LeviathanVS.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.cpp  stdafx.h
Windows/: Leviathan.cbp  Leviathan.depend  Leviathan.layout
src/: CMakeLists.txt  main.cpp  main.h
src/Process/: WTcAsteroidObject.cpp  WTcAsteroidObject.h  WTcBullet.cpp  WTcBullet.h  WTcCore.cpp  WTcCore.h  WTcExitScreen.cpp  WTcExitScreen.h  WTcFighter.cpp  WTcFighter.h  WTcMapDisplay.cpp  WTcMapDisplay.h  WTcMessageFeed.cpp  WTcMessageFeed.h  WTcPlannedSettings.cpp  WTcPlannedSettings.h  WTcPlayer.cpp  WTcPlayer.h  WTcShield.cpp  WTcShield.h
src/Process/Combat/: WTcCombatScreen.cpp  WTcCombatScreen.h  WTcCombatStatusBox.cpp  WTcCombatStatusBox.h  WTcDamage.cpp  WTcDamage.h  WTcFoundationTracking.cpp  WTcFoundationTracking.h  WTcLeviathan.cpp  WTcLeviathan.h  WTcLeviathanBeamTurret.cpp  WTcLeviathanBeamTurret.h  WTcLeviathanCoolingVents.cpp  WTcLeviathanCoolingVents.h  WTcLeviathanGeneral.cpp  WTcLeviathanGeneral.h  WTcLeviathanHull.cpp  WTcLeviathanHull.h  WTcLeviathanHullMultiHull.cpp  WTcLeviathanHullMultiHull.h  WTcLeviathanMissileTurret.cpp  WTcLeviathanMissileTurret.h  WTcLeviathanProjectileTurret.cpp  WTcLeviathanProjectileTurret.h  WTcLeviathanReactor.cpp  WTcLeviathanReactor.h  WTcLeviathanRepair.cpp  WTcLeviathanRepair.h  WTcLeviathanSensor.cpp  WTcLeviathanSensor.h  WTcLeviathanShield.cpp  WTcLeviathanShield.h  WTcLeviathanThruster.cpp  WTcLeviathanThruster.h  WTcLeviathanTractorTurret.cpp  WTcLeviathanTractorTurret.h  WTcLeviathanTurret.cpp  WTcLeviathanTurret.h  WTcMissile.cpp  WTcMissile.h
src/Process/Leviathans/: WTcBeamLeviathanMk1.cpp  WTcBeamLeviathanMk1.h  WTcGunLeviathanMk1.cpp  WTcGunLeviathanMk1.h  WTcMissileLeviathanMk1.cpp  WTcMissileLeviathanMk1.h  WTcTrainingLeviathan.cpp  WTcTrainingLeviathan.h
src/Process/Planning/: WTcPlanningArcs.cpp  WTcPlanningArcs.h  WTcPlanningBeamTurret.cpp  WTcPlanningBeamTurret.h  WTcPlanningComponent.cpp  WTcPlanningComponent.h  WTcPlanningComponentBox.cpp  WTcPlanningComponentBox.h  WTcPlanningComponentTextField.cpp  WTcPlanningComponentTextField.h  WTcPlanningHull.cpp  WTcPlanningHull.h  WTcPlanningLeviathan.cpp  WTcPlanningLeviathan.h  WTcPlanningMissileRack.cpp  WTcPlanningMissileRack.h  WTcPlanningMissileTurret.cpp  WTcPlanningMissileTurret.h  WTcPlanningPlayerGun.cpp  WTcPlanningPlayerGun.h  WTcPlanningProjectileTurret.cpp  WTcPlanningProjectileTurret.h  WTcPlanningReactor.cpp  WTcPlanningReactor.h  WTcPlanningRepair.cpp  WTcPlanningRepair.h  WTcPlanningScreen.cpp  WTcPlanningScreen.h  WTcPlanningSensor.cpp  WTcPlanningSensor.h  WTcPlanningShield.cpp  WTcPlanningShield.h  WTcPlanningThruster.cpp  WTcPlanningThruster.h  WTcPlanningTractorTurret.cpp  WTcPlanningTractorTurret.h  WTcPlanningTurret.cpp  WTcPlanningTurret.h  WTcPlanningVent.cpp  WTcPlanningVent.h
src/Process/SelectionScreen/: WTcLeviathanSelectionMenu.cpp  WTcLeviathanSelectionMenu.h
src/Process/Settings/: WTcDamageSettings.cpp  WTcDamageSettings.h  WTcFoundationClassSettings.cpp  WTcFoundationClassSettings.h  WTcLeviathanBeamTurretSettings.cpp  WTcLeviathanBeamTurretSettings.h  WTcLeviathanCoolingVentsSettings.cpp  WTcLeviathanCoolingVentsSettings.h  WTcLeviathanGeneralSettings.cpp  WTcLeviathanGeneralSettings.h  WTcLeviathanHullMultiHullSettings.cpp  WTcLeviathanHullMultiHullSettings.h  WTcLeviathanHullSettings.cpp  WTcLeviathanHullSettings.h  WTcLeviathanMissileTurretSettings.cpp  WTcLeviathanMissileTurretSettings.h  WTcLeviathanProjectileTurretSettings.cpp  WTcLeviathanProjectileTurretSettings.h  WTcLeviathanReactorSettings.cpp  WTcLeviathanReactorSettings.h  WTcLeviathanRepairSettings.cpp  WTcLeviathanRepairSettings.h  WTcLeviathanSensorSettings.cpp  WTcLeviathanSensorSettings.h  WTcLeviathanSettings.cpp  WTcLeviathanSettings.h  WTcLeviathanShieldSettings.cpp  WTcLeviathanShieldSettings.h  WTcLeviathanThrusterSettings.cpp  WTcLeviathanThrusterSettings.h  WTcLeviathanTractorTurretSettings.cpp  WTcLeviathanTractorTurretSettings.h  WTcLeviathanTurretSettings.cpp  WTcLeviathanTurretSettings.h  WTcMissileSettings.cpp  WTcMissileSettings.h
src/Settings/: WTGameSettings.h  WTcUserSettings.cpp  WTcUserSettings.h
